--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
-language: node_js
-before_script:
-  - npm run tsc
-node_js:
-  - '10'
-  - '12'
+matrix:
+  include:
+    - language: rust
+      before_script:
+        - cd native
+      script:
+        - wasm-pack build -t nodejs -d ../out
+
+    - language: node_js
+      node_js:
+        - '10'
+        - '12'
