move wasm-pack to before script

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ matrix:
       cache:
         - cargo
         - npm
-      script: cargo install wasm-pack & wasm-pack build -t nodejs -d "../bin" "./native"
+      before_script: cargo install wasm-pack
+      script:  wasm-pack build -t nodejs -d "../bin" "./native"
 
     - language: node_js
       node_js:
