--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ matrix:
       cache:
         - cargo
         - npm
-      before_script: cargo install wasm-pack
+      before_script: HAS_WASM_PACK = $(shell which wasm-pack); if [ -z "$(HAS_WASM_PACK)" ]; then cargo install wasm-pack; fi;
       script:  wasm-pack build -t nodejs -d "../bin" "./native"
 
     - language: node_js
