try relying on nvm

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 matrix:
   include:
-    - env:
-        - TRAVIS_NODE_VERSION="0.12"
-        - TRAVIS_NODE_VERSION="4"
     - language: rust
       cache:
         - cargo
@@ -11,7 +8,7 @@ matrix:
       #      before_script: HAS_WASM_PACK = $(shell which wasm-pack); if [ -z "$(HAS_WASM_PACK)" ]; then cargo install wasm-pack; fi;
       before_script: make cargo
       before_install:
-        - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm install $TRAVIS_NODE_VERSION;
+        - nvm install 12 && nvm use 12
       script: wasm-pack build -t nodejs -d "../bin" "./native" && npm run tsc && npm test
 
     - language: node_js
