--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
       before_script: make cargo
       before_install:
         - nvm install 12 && nvm use 12
-      script: wasm-pack build -t nodejs -d "../bin" "./native" && npm run tsc && npm test
+      script: npm install && wasm-pack build -t nodejs -d "../bin" "./native" && npm run tsc && npm test
 
     - language: node_js
       node_js:
