--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,20 @@ matrix:
       cache:
         - cargo
         - npm
-        - $TRAVIS_BUILD_DIR/bin
+#        - $TRAVIS_BUILD_DIR/bin
       #      before_script: HAS_WASM_PACK = $(shell which wasm-pack); if [ -z "$(HAS_WASM_PACK)" ]; then cargo install wasm-pack; fi;
       before_script: make cargo
       before_install:
         - nvm install 12 && nvm use 12
       script: npm install && wasm-pack build -t nodejs -d "../bin" "./native" && npm run tsc && npm test
 
-    - language: node_js
-      node_js:
-        - '10'
-        - '12'
-      before_script:
-        - npm run tsc
-      cache:
-        - cargo
-        - npm
-        - $TRAVIS_BUILD_DIR/bin
+#    - language: node_js
+#      node_js:
+#        - '10'
+#        - '12'
+#      before_script:
+#        - npm run tsc
+#      cache:
+#        - cargo
+#        - npm
+#        - $TRAVIS_BUILD_DIR/bin
