--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,8 @@ matrix:
         - npm
 #        - $TRAVIS_BUILD_DIR/bin
       #      before_script: HAS_WASM_PACK = $(shell which wasm-pack); if [ -z "$(HAS_WASM_PACK)" ]; then cargo install wasm-pack; fi;
-      before_install:
-        - make travis
-        - nvm install 12 && nvm use 12
-      before_script: make compile
+      before_install: nvm install 12 && nvm use 12
+      before_script: make setup && make compile
       script: npm test
 
 #    - language: node_js
