--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -26,8 +26,8 @@ lightning = { path = "/Users/arik/Developer/rust-lightning/lightning" }
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
-opt-level = "s"
-#lto = true
-#opt-level = "z"
+# opt-level = "s"
+# lto = true
+# opt-level = "z"
 
 
